css/app.css
body {
  font-family: 'Josefin Sans', sans-serif;
}


.no-js #top-menu {
  display: none;
}

@media screen and (min-width: 40em) {
  .no-js #top-menu {
    display: block;
  }

  .no-js .title-bar {
    display: none;
  }
}


nav a, nav a:visited {
    color: #999999;
    border-bottom: 3px solid #333333;
}

nav a:hover, a.active {
    color: #2ca0a0;
    border-bottom: 3px solid #2ca0a0;
}

a {
  color: #2ca0a0;
}

h1, h2, h3, h4, h5, h6 {
  text-align: center;
  padding-top: 1em;
  padding-bottom: 1em;
  color: #2ca0a0;
  font-family: 'Josefin Sans', sans-serif;
}

.sticky {
  width:100%;
}

.nomargin {
  margin-right: 0px;
  margin-left: 0px;
}

.hero {
    background: #e6e6e6 url("../img/alexandra-3.jpg") no-repeat fixed center;
    background-size: cover;
    height: 60vh;
    background-position: right top;
}

.herotext {
  position: relative;
  display: block;
  width: 1000px;
  max-width: 70%;
  margin-left: auto;
  margin-right: auto;
  opacity: 0;
  text-align: center;
  color: #ffffff;
}

#back-top {
  position: fixed;
  bottom:20px;
  right: 2%;
  z-index: 100;
  opacity: 0.8;
  max-width: 10%;
  height: auto;
}

.centered {
    text-align:center;
}

nav {
  display:inline-block;
}

.herooverlay {
    background: rgba(0,0,0,0.5);
    height: 100%;
    width: 100%;
}

.grey {
    background-color: #f2f2f2;
}


.darkbg {
  background-color: #333333;
}

.grey img  {
  -webkit-filter: grayscale(100%);
  filter: grayscale(100%);
}

.img-container {
  margin: 5px;
  position: relative;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  display: block;
  overflow: hidden;
  -webkit-transition: all 0.5s;
  -moz-transition: all 0.5s;
  -o-transition: all 0.5s;
  transition: opacity 0.5s;
  margin: auto;
}

.img-container img {
  max-width: 100%;
  vertical-align: top;
  -webkit-transition: all 0.3s;
  -moz-transition: all 0.3s;
  transition: all 0.3s;
}

.img-container:after {
  content: '\A';
  position: absolute;
  width: 100%; height:100%;
  top:0;
  left:0;
  background:rgba(0, 0, 0, 0.9);
  opacity: 0;
  transition: all 0.5s;
  -webkit-transition: all 0.5s;
	}

.img-container:hover:after {
  opacity: 1;
}

.zoom-in {
	-webkit-transform: scale(1.1);
	-moz-transform: scale(1.1);
	transform: scale(1.1);
	}

.img-container:hover .buttonMore {
  z-index: 10;
  top: 50%;
  left: 50%;
}

.buttonMore {
  display: inline-block;
  position: absolute;
  margin: -1.625rem 0 0 -4rem;
  padding: 10px;
  border: 1px solid #87dede;
  content: "View project";
  color: #87dede;
  font-weight: bold;
  font-size: 0.8em;
  text-transform: uppercase;
  transition: all 0.3s ease;
}

.buttonMore:hover {
  border-color: #ffffff;
  color: #ffffff;
}

.tech-icons {
  display: inline-block;
  float: left;
  padding: 5px;
  text-align: center;
  width: 40px;
  height: auto;
}


.reverse {
  background: #d7f4f4;
  }

.upperline {
  border-top: 2px solid #ffffff;
  text-align: left;
  font-weight: bold;
  padding-top: 20px;
  color: #2ca0a0;
}

.skill-icon {
  display: block;
  width: 100px;
  height: auto;
  margin: 0 auto;
  padding: 20px 0;
  -webkit-filter: grayscale(100%);
  filter: grayscale(100%);

}

.reverse {
  margin-top: 30px;
  margin-bottom: 30px;
  padding-top: 30px;
  padding-bottom: 60px;
}



/* timeline related:  */

.timeline .timelineEvent {
    margin: 0 0 0.9375rem;
    clear: both;
    padding: 0;
    background: transparent;
    opacity: 0;
    transition: -webkit-transform 0.2s ease-out,opacity 0.3s ease-out;
    transition: transform 0.2s ease-out,opacity 0.3s ease-out;
    position: relative;
	}

.timeline .timelineEvent:nth-child(even) {
    -webkit-transform: translateX(50px);
    transform: translateX(50px);
}

.timeline .timelineEvent:nth-child(odd) {
    -webkit-transform: translateX(-50px);
    transform: translateX(-50px);
}

.timeline .timelineEvent.show {
    opacity: 1;
    -webkit-transform: translateX(0px) !important;
    transform: translateX(0px) !important;
}

.eventContent {
	padding: 20px;
	border-radius: 10px;
	margin-top: 10px;
	margin-bottom: 10px;
	background-color: #ffffff;
	width: 100%;
	display: inline-block;
	}

.worktype {
  background-color: #f2f2f2;
  border-radius: 0 0 10px 10px;
  padding-top: 10px;
  padding-bottom: 10px;
}

.companies {
  border: 1px solid #f2f2f2;
  border-radius: 10px 10px 0 0;
  padding-bottom: 10px;
}

.middleLine {
	background-image: url('../img/divider-2.png');
	background-position: center;
	background-repeat: repeat-y;
  visibility: hidden;
	}

.eventArrow {
	display: inline-block;
	width: 20%;
	float: right;
	padding-top: 50px;
	}

.leftArrow {
	float: left !important;
}

 .iconContainer {
  left: 50%;
  height: 50%;
  width: 60px;
  position: absolute;
 }

 .timelineIcon {
  position: absolute;
  bottom: -30px;
  left: -30px;
  z-index: 10;
  width: 60px;
  height: 60px;
  border: 5px solid #fff;
  border-radius: 100%;
 }

 .timelineIconCenter {
  top: -30px;
  bottom: 0px;
  margin-top: 10px;
 }



.work-logo {
  display: inline-block;
  padding: 5px 0;
  height: auto;
  width: 100%;
  max-width: 60px;
  text-align: center;
}
 .blue {
   background-color: #2ca0a0;
   margin-right: -20px;
 }

.sm-icons li {
  display: inline-block;
}

.sm-icons img {
  width: 60px;
  padding: 10px;
  height: auto;
}

.sm-icons a, ul {
  border: 0px;
  margin: 0px;
}

a.button {
  border: 3px solid #2ca0a0;
  margin-top: 30px;
  margin-bottom: 30px;
  border-radius: 50px;
  font-size: 1.5em;
  background-color: #ffffff;
  color: #2ca0a0;
}

.button:hover {
  background-color: #2ca0a0;
}

#footer {
  background-color: #333333;
  color: #2ca0a0;
  padding-top: 50px;
  padding-bottom: 50px;
  margin-top: 100px;
}


/* end of timeline related */

